# aspyre

./: .gitignore  aspyre.py  pyproject.toml
.github/workflows/: schedule-update-actions.yml
aspyre/: __init__.py  _annotations.py  _builder.py  _command.py  _utils.py
aspyre/resources/: __init__.py  _base.py  _models.py
src/aspyre/: __init__.py  _builder.py  _utils.py  _version.py
src/aspyre/resources/: _base.py  _extensions.py  _models.py  _resources.py
tests/: conftest.py  test_builder.py  test_certificate.py  test_connectionstring.py  test_container.py  test_executable.py  test_parameter.py  test_project.py  test_resource.py
tests/generated_outputs/test_add_certificate_authority_collection_basic/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_invalid_name/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificate_bytes/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificate_string/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_bytes/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_file/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_store_auth_root/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_store_ca/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_store_my/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_store_root/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_from_store_trusted_people/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_mixed/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_certificates_strings/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_exclude_from_manifest/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_icon_name/: apphost.cs
tests/generated_outputs/test_add_certificate_authority_collection_with_url/: apphost.cs
tests/generated_outputs/test_add_connection_string_default/: apphost.cs
tests/generated_outputs/test_add_connection_string_with_env_var/: apphost.cs
tests/generated_outputs/test_add_container_basic/: apphost.cs
tests/generated_outputs/test_add_container_with_args/: apphost.cs
tests/generated_outputs/test_add_container_with_tag/: apphost.cs
tests/generated_outputs/test_add_csharp_app_basic/: apphost.cs
tests/generated_outputs/test_add_dockerfile_basic/: apphost.cs
tests/generated_outputs/test_add_dockerfile_comprehensive_options/: apphost.cs
tests/generated_outputs/test_add_dockerfile_microservices_scenario/: apphost.cs
tests/generated_outputs/test_add_dockerfile_with_args/: apphost.cs
tests/generated_outputs/test_add_dockerfile_with_bind_mount/: apphost.cs
tools/: convert_aspire_hosting.py
(+259 files in other folders)
