[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "aspyre"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Python AppHost for Aspire"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version", "readme"
]

[project.urls]
Source = "https://github.com/annatisch/aspyre"
Tracker = "https://github.com/annatisch/aspyre/issues"

[tool.setuptools.dynamic]
version = {attr = "aspyre._version.VERSION"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
]

[tool.setuptools.package-data]
pytyped = ["py.typed"]