[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name =  "aspyre"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Python AppHost for Aspire"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version", "readme"
]

[project.urls]
Source = "https://github.com/annatisch/aspyre"
Tracker = "https://github.com/annatisch/aspyre/issues"

[tool.setuptools.dynamic]
version = {attr = "aspyre._version.VERSION"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
]

[tool.setuptools.package-data]
pytyped = ["py.typed"]

[project.optional-dependencies]
test = [
    "bandit[toml]",
    "black",
    "pylint",
    "mypy",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.coverage]
omit = [
    "**/conftest.py",
]

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts"]
recursive = true

[tool.black]
line-length = 120

[tool.pylint]
ignore-patterns="test.*?py,conftest.py"

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "C0114",  # missing-module-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
]

[tool.pylint.'FORMAT']
max-line-length=120
max-module-lines=1000